--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -202,6 +202,8 @@
     <Compile Include="Assets\Prefabs\Effects\Realistic Effects Pack v4\Effects\Scripts\Curves\RFX4_ScaleCurves.cs" />
     <Compile Include="Assets\Effects and Prefabs\MeshEffect\DemoResources\Scripts\ME_MouseOrbit.cs" />
     <Compile Include="Assets\Sky\Skies\Scripts\Render Features\SkyboxCloudsFeature.cs" />
+    <Compile Include="Assets\playerGameObject.cs" />
+    <Compile Include="Assets\playerFallowTarget.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Samples\Terrain Tools\0.1.0-preview\Terrain Assets\ThirdPartyNotices.txt" />
